0.6.66 - migration to remove inactive versions from content sources, add link from shows library management page to search for items in add media page, fix for anime format searches, fix task toggle intervals <10 seconds, fix continue in background behavior on frontend, start button now accounts for starting stopping states, fix for anime altnerate name filtering, fix for torrent removal rate limiting error logic, fix for movies with none airtime scraping at incorrect time, additional caching for anidb calls, fixes for anime genre passing to scraper manager, adjust plex verification scan amounts, keep heartbeat running to ensure queue can resume, improved recently added shows display, fixes for task monitor anchoring, additional anidb caching, scraper modal to select version, resync button in db, additional connection failure watchdog, additional bottom spacing on mobile when task view active, fix for physical release items conflicting with alternate release strategy, improve queue page performance, validate supercharacters, peak ram usage improvements, media matcher improvements, estimated queue completion and items per hour, minor fix for XEM mapping, partial collection status indicator, releases link through version button, discord link

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2847,7 +2847,7 @@ body.modal-open {
 
 @media (max-width: 1045px) {
     .disable-evil-btn {
-        padding: 6px 10px;
+        padding: 1px 4px;
         font-size: 1em;
         border-radius: 5px;
     }
